Targeted co-break-word additions to prevent overflow
https://jira.coreos.com/browse/CONSOLE-1335

--- a/frontend/public/components/_icon-and-text.scss
+++ b/frontend/public/components/_icon-and-text.scss
@@ -1,8 +1,14 @@
 .co-icon-and-text {
   align-items: baseline;
   display: flex;
+  min-width: 0; // required so co-break-word works
+  @include co-break-word;
 }
 
 .co-icon-and-text__icon {
   margin-right: 5px;
+}
+
+.co-icon-and-text__text {
+  min-width: 0; // enable break-word
 }
